# SynapsePay

./: .env.example  .gitignore  .vercelignore  AUDIT_FINAL_REPORT.md  Anchor.toml  Cargo.toml  DEMO_CHECKLIST.md  DEMO_VIDEO_SCRIPT.md  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_README.md  FINAL_CHECKLIST.md  GITHUB_README.md  HACKATHON_SUBMISSION.md  IMPLEMENTATION_PLAN.md  MOBILE_TESTING.md  PRESENTATION.md  QUICK_TEST_GUIDE.md  README.md  README_OLD.md  USER_GUIDE.md  VERCEL_DEPLOYMENT.md  docker-compose.yml  fix-payment-error.js  get-devnet-tokens.md  package-lock.json  package.json  quick-setup.sh  setup-wallet.js  test-scripts.json  test-transaction.js  tsconfig.json  turbo.json  vercel.json  verify-contracts.sh
.cargo/: config.toml
audit/: audit-config.toml  build-system.sh  checkpoint.sh  comprehensive-system-test.sh  deploy-devnet.sh  env-setup.sh  final-comprehensive-audit.sh  generate-final-reports.sh  integration-tests.sh  package.json  run-integration-performance-tests-final.sh  run-integration-performance-tests-fixed.sh  run-integration-performance-tests-optimized.sh  run-integration-performance-tests.sh  run-tests.sh  security-check.sh  simple-verify.sh  test-connections.sh  (+2 more)
audit/property-tests/: Cargo.toml
audit/property-tests/.cargo/: config.toml
audit/property-tests/src/: integration_performance.rs  lib.rs
programs/synapsepay-payments/: Cargo.toml
programs/synapsepay-payments/src/: lib.rs
programs/synapsepay-payments/src/instructions/: claim_payment.rs  complete_task.rs  create_invoice.rs  initialize_platform.rs  mint_receipt.rs  mod.rs  refund_payment.rs  settle_payment.rs  verify_payment.rs  withdraw_fees.rs
programs/synapsepay-payments/src/state/: invoice.rs  mod.rs  payment.rs  receipt.rs
programs/synapsepay-registry/: Cargo.toml
programs/synapsepay-registry/src/: lib.rs
programs/synapsepay-registry/src/instructions/: mod.rs  register_agent.rs  update_agent.rs
(+161 files in other folders)
