[workspace]
members = [
    "programs/synapsepay-registry",
    "programs/synapsepay-payments",
    "programs/synapsepay-scheduler",
    "audit/property-tests"
]
resolver = "2"

# SBF-specific configurations for Solana programs
[workspace.dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
