[package]
name = "synapsepay-audit-tests"
version = "0.1.0"
edition = "2021"

[dependencies]
# Property testing
proptest = "1.4"
quickcheck = "1.0"

# Solana and Anchor
anchor-lang = "0.30.1"
anchor-client = "0.30.1"
solana-sdk = "1.18"
solana-client = "1.18"
solana-program-test = "1.18"

# Utilities
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"

# Testing
env_logger = "0.10"

[dev-dependencies]
test-log = "0.2"