[package]
name = "synapsepay-registry"
version = "0.1.0"
description = "SynapsePay Agent Registry - Anchor Program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "synapsepay_registry"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"
